// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Snapshot Tests Toggle with off state renderer.creates properly 1`] = `
<label>
  <div
    style={
      Object {
        "MozTransition": "opacity 0.25s",
        "MozUserSelect": "none",
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
        "WebkitTransition": "opacity 0.25s",
        "WebkitUserSelect": "none",
        "borderRadius": 15,
        "direction": "ltr",
        "display": "inline-block",
        "msUserSelect": "none",
        "opacity": 1,
        "position": "relative",
        "textAlign": "left",
        "touchAction": "none",
        "transition": "opacity 0.25s",
        "userSelect": "none",
      }
    }
  >
    <div
      className="react-switch-bg"
      onClick={[Function]}
      onMouseDown={[Function]}
      style={
        Object {
          "MozTransition": "background 0.25s",
          "WebkitTransition": "background 0.25s",
          "background": "#ABABAB",
          "borderRadius": 15,
          "cursor": "pointer",
          "height": 30,
          "margin": 0,
          "position": "relative",
          "transition": "background 0.25s",
          "width": 57,
        }
      }
    />
    <div
      className="react-switch-handle"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "background": "#FFFFFF",
          "border": 0,
          "borderRadius": "50%",
          "boxShadow": null,
          "cursor": "pointer",
          "display": "inline-block",
          "height": 24,
          "outline": 0,
          "position": "absolute",
          "top": 3,
          "transform": "translateX(3px)",
          "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "width": 24,
        }
      }
    />
    <input
      checked={false}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="switch"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "width": 1,
        }
      }
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Toggle Snapshot Tests Toggle with off state renderer.creates properly 2`] = `
<label>
  <div
    style={
      Object {
        "MozTransition": "opacity 0.25s",
        "MozUserSelect": "none",
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
        "WebkitTransition": "opacity 0.25s",
        "WebkitUserSelect": "none",
        "borderRadius": 15,
        "direction": "ltr",
        "display": "inline-block",
        "msUserSelect": "none",
        "opacity": 0.5,
        "position": "relative",
        "textAlign": "left",
        "touchAction": "none",
        "transition": "opacity 0.25s",
        "userSelect": "none",
      }
    }
  >
    <div
      className="react-switch-bg"
      onClick={null}
      onMouseDown={[Function]}
      style={
        Object {
          "MozTransition": "background 0.25s",
          "WebkitTransition": "background 0.25s",
          "background": "#ABABAB",
          "borderRadius": 15,
          "cursor": "default",
          "height": 30,
          "margin": 0,
          "position": "relative",
          "transition": "background 0.25s",
          "width": 57,
        }
      }
    />
    <div
      className="react-switch-handle"
      onClick={[Function]}
      onMouseDown={null}
      onTouchCancel={null}
      onTouchEnd={null}
      onTouchMove={null}
      onTouchStart={null}
      style={
        Object {
          "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "background": "#FFFFFF",
          "border": 0,
          "borderRadius": "50%",
          "boxShadow": null,
          "cursor": "default",
          "display": "inline-block",
          "height": 24,
          "outline": 0,
          "position": "absolute",
          "top": 3,
          "transform": "translateX(3px)",
          "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "width": 24,
        }
      }
    />
    <input
      checked={false}
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="switch"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "width": 1,
        }
      }
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Toggle Snapshot Tests Toggle with on state renderer.creates properly 1`] = `
<label>
  <div
    style={
      Object {
        "MozTransition": "opacity 0.25s",
        "MozUserSelect": "none",
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
        "WebkitTransition": "opacity 0.25s",
        "WebkitUserSelect": "none",
        "borderRadius": 15,
        "direction": "ltr",
        "display": "inline-block",
        "msUserSelect": "none",
        "opacity": 1,
        "position": "relative",
        "textAlign": "left",
        "touchAction": "none",
        "transition": "opacity 0.25s",
        "userSelect": "none",
      }
    }
  >
    <div
      className="react-switch-bg"
      onClick={[Function]}
      onMouseDown={[Function]}
      style={
        Object {
          "MozTransition": "background 0.25s",
          "WebkitTransition": "background 0.25s",
          "background": "#00A87E",
          "borderRadius": 15,
          "cursor": "pointer",
          "height": 30,
          "margin": 0,
          "position": "relative",
          "transition": "background 0.25s",
          "width": 57,
        }
      }
    />
    <div
      className="react-switch-handle"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "background": "#FFFFFF",
          "border": 0,
          "borderRadius": "50%",
          "boxShadow": null,
          "cursor": "pointer",
          "display": "inline-block",
          "height": 24,
          "outline": 0,
          "position": "absolute",
          "top": 3,
          "transform": "translateX(30px)",
          "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
          "width": 24,
        }
      }
    />
    <input
      checked={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="switch"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "width": 1,
        }
      }
      type="checkbox"
    />
  </div>
</label>
`;
